[package]
name = "websocket-bridge"
description = "WebSocket-to-HTTP reverse proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = [ "ws", "headers" ] }
dashmap = "5.4.0"
http = "0.2.8"
tokio = "1.22.0"
tower-http = { version = "0.3.4", features = [ "trace" ] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.2.2", features = [ "v4", "serde" ] }
reqwest = "0.11.13"
headers = "0.3.8"
once_cell = "1.16.0"
regex = "1.7.0"
futures = "0.3.25"

[dev-dependencies]
async-trait = "0.1.58"
pretty_env_logger = "0.4.0"
tokio = { version = "1.22.0", features = [ "rt", "macros" ] }
tokio-tungstenite = "0.17.2"
tungstenite = "0.17.3"
