[package]
name = "websocket-bridge"
description = "WebSocket-to-HTTP reverse proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.0", features = [ "ws", "headers" ] }
dashmap = "5.4.0"
http = "0.2.8"
tokio = { version = "1.43.1", features = [ "rt-multi-thread", "macros" ] }
tower-http = { version = "0.3.4", features = [ "trace", "cors" ] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.2.2", features = [ "v4", "serde" ] }
reqwest = "0.11.13"
headers = "0.3.8"
once_cell = "1.16.0"
regex = "1.7.0"
futures = "0.3.25"
clap = { version = "4.0.27", features = [ "derive" ] }
axum-server = { git = "https://github.com/programatik29/axum-server", rev = "97e77096dbf4ffe9fb178fe60934ac37ba4ca433", features = [ "tls-rustls" ] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.148", features = [ "derive" ] }

[dev-dependencies]
async-trait = "0.1.58"
tokio = { version = "1.43.1", features = [ "rt", "macros" ] }
tokio-tungstenite = "0.17.2"
tungstenite = "0.20.1"
